@startuml
title SO DO LOP 3 TANG - TRA CUU PHONG GIUONG

top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor #FFFACD
    BorderColor #9B7B7B
}

package "TANG GIAO DIEN" #EAF2F8 {

class MHTraCuuPhongGiuong{

+cbbToaNha : ComboBox
+cbbTang : ComboBox
+cbbLoaiPhong : ComboBox
+cbbTrangThai : ComboBox
+cbbChiNhanh : ComboBox
+txtGiaFrom : TextBox
+txtGiaTo : TextBox
+dsPhong : GridView
+pnlTaiSan : Panel
+btnXemTaiSan : Button
+lblChuThich : Label

--

+boLocThayDoi_Handler()

+btnXemTaiSan_Click(maPhong)

+hienThiDanhSachPhong(dsPhong)

+hienThiTaiSan(dsTaiSan)

}

}

package "TANG NGHIEP VU" #FCF3CF {

class TaiSan{

+maTS : String
+tenTaiSan : String
+giaTri : Decimal

}

class Phong_TaiSan{

+maPhong : String
+maTS : String
+soLuongTieuChuan : Integer

--

+layTaiSanTheoPhong(maPhong)

+laySoLuong(maPhong,maTS)

}

class Phong{

+maPhong : String
+soPhong : String
+maCN : String
+toaNha : String
+gioiTinhChoPhep : String
+trangThai : String
+sucChua : Integer
+tang : String
+maLP : String

--

+locPhongTheoTieuChi(toaNha,tang,maLP,maCN,trangThai,giaMin,giaMax)

+layDanhSachGiuong(maPhong)

+layTaiSan(maPhong)

}

class Giuong{

+maGiuong : String
+maPhong : String
+soGiuong : String
+trangThai : String

--

+layGiuongTheoPhong(maPhong)

}

class LoaiPhong{

+maLP : String
+tenLoaiPhong : String
+sucChua : String
+giaThue : String

--

+layDanhSachLoaiPhong()

}

class ChiNhanh{

+maCN : String
+tenChiNhanh : String
+diaChi : String
+sdt : String

--

+layDanhSach()

}

}

package "TANG TRUY CAP DU LIEU" #FDEDEC {

class TaiSanDB{

+layTheoMa(maTS)

}

class Phong_TaiSanDB{

+layTaiSanTheoPhong(maPhong)

}

class PhongDB{

+layPhongTheoBoLoc(toaNha,tang,maLP,maCN,trangThai,giaMin,giaMax)

}

class GiuongDB{

+layGiuongTheoPhong(maPhong)

}

class LoaiPhongDB{

+layDanhSach()

+layTheoMa(maLP)

}

class ChiNhanhDB{

+layDanhSach()

}

}

'========================
' Quan hệ
'========================

MHTraCuuPhongGiuong o-- Phong
MHTraCuuPhongGiuong o-- ChiNhanh

Phong "1" -- "0..*" Giuong : gom
Phong "1" -- "1" LoaiPhong : thuoc
Phong "1" -- "0..*" Phong_TaiSan : co

Phong_TaiSan "0..*" -- "1" TaiSan : tham chieu

Phong o-- PhongDB
Giuong o-- GiuongDB
LoaiPhong o-- LoaiPhongDB
ChiNhanh o-- ChiNhanhDB
Phong_TaiSan o-- Phong_TaiSanDB
TaiSan o-- TaiSanDB

@enduml